--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   }
 }
